@@ -1,3 +1,5 @@
+2006/1/27 -- released version 20060127_trunk
+
 2006/1/26 -- released version 20060126_trunk
 
 2006/1/25 -- released version 20060125_trunk
